--- a/proxy_site.cfg
+++ b/proxy_site.cfg
@@ -19,6 +19,8 @@ proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
 proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header X-Forwarded-Host  $host;
 proxy_set_header X-Forwarded-Port  $server_port;
+proxy_headers_hash_max_size 512;
+proxy_headers_hash_bucket_size 128; 
 
 # Proxy timeouts
 proxy_connect_timeout              60s;
